--- a/WebContent/HTML/Brooklyn_index.html
+++ b/WebContent/HTML/Brooklyn_index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link href="../css/brooklyn.css" rel="stylesheet">
+  <link href="../css/brooklyn.css" rel="stylesheet" type="text/css">
 </head>
 <body id="home" data-spy="scroll" data-target=".navbar" data-offset="50">
 <nav class="navbar navbar-default navbar-fixed-top">
