--- a/WebContent/HTML/Brooklyn_index.html
+++ b/WebContent/HTML/Brooklyn_index.html
@@ -12,6 +12,7 @@
   
   <!-- <link href="../css/brooklyn.css" rel="stylesheet" type="text/css"> -->
   <link type="text/css" rel="stylesheet" href="../css/brooklyn_style.css">
+  <base href="/">
 </head>
 <body id="home" data-spy="scroll" data-target=".navbar" data-offset="50">
 <nav class="navbar navbar-default navbar-fixed-top">
