--- a/WebContent/HTML/Brooklyn_index.html
+++ b/WebContent/HTML/Brooklyn_index.html
@@ -10,7 +10,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
-  <!-- <link href="../css/brooklyn.css" rel="stylesheet" type="text/css"> -->
+  <link type="text/css"  rel="stylesheet" href="../css/brooklyn.css">
   <link type="text/css" rel="stylesheet" href="../css/brooklyn_style.css">
   <base href="/">
 </head>
