--- a/WebContent/HTML/Brooklyn_index.html
+++ b/WebContent/HTML/Brooklyn_index.html
@@ -10,8 +10,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
-  <link type="text/css"  rel="stylesheet" href="../css/brooklyn.css">
-  <link type="text/css" rel="stylesheet" href="../css/brooklyn_style.css">
+  <!-- <link type="text/css"  rel="stylesheet" href="../css/brooklyn.css"> -->
+  <link type="text/css" rel="stylesheet" href="../css/style_brooklyn.css">
   <base href="/">
 </head>
 <body id="home" data-spy="scroll" data-target=".navbar" data-offset="50">
