--- a/WebContent/HTML/Brooklyn_index.html
+++ b/WebContent/HTML/Brooklyn_index.html
@@ -10,8 +10,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
-  <!-- <link type="text/css"  rel="stylesheet" href="../css/brooklyn.css"> -->
-  <link type="text/css" rel="stylesheet" href="../css/style_brooklyn.css">
+  <link type="text/css"  rel="stylesheet" href="../css/brooklyn.css">
   <base href="/">
 </head>
 <body id="home" data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -52,7 +51,7 @@
   </ol>
 
   <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
+  <div class="carousel-inner" role="listbox"> 
     <div class="item active">
       <img src="../img/slide1.jpg" alt="August 5, 2019">
       <div class="carousel-caption">
@@ -94,7 +93,7 @@
 </div>
 <div id="about" class="container">
   <h3 class="text-center">The  Brooklyn Outdoor Film Festival</h3>
-  <h5 class="text-center">Enjoy watching <em><b>FREE</b></em> movies from <b>5th August to 8th August</b> at <b>Brooklyn Bridge Park</b>!!</p>
+  <h5 class="text-center">Enjoy watching <em><b>FREE</b></em> movies from <b>5th August to 8th August</b> at <b>Brooklyn Bridge Park</b>!!</p></h5>
   <hr>
   <br>
   <div class="text-left">
@@ -394,7 +393,9 @@
    	<div class="row">
  		<div class="col-sm-offset-4 col-sm-4 col-xs-offset-4 col-xs-4">
  			<ul class="nav navbar-nav visible-xs visible-sm">
-      			<a class="social" title="Send us an email" target="_blank" title="Go to home page"href="mailto:@gmail.com"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
+ 				<a class="social" title="Send us an email" href="#">
+      				<i id="social-em" class="fa fa-envelope-square fa-3x social"></i>
+      			</a>
       			<a class="social" title="Connect with us on facebook" target="_blank" href="https://www.facebook.com"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
         		<a class="social" title="Connect with us on twitter" target="_blank" href="https://www.twitter.com"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
       		</ul>
