--- a/WebContent/HTML/Brooklyn_index.html
+++ b/WebContent/HTML/Brooklyn_index.html
@@ -33,7 +33,7 @@
         <li><a href="#venue">VENUE</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right visible-md visible-lg">
-      	<a class="social" title="Send us an email" target="_blank" title="Go to home page"href="mailto:@gmail.com"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
+      	<a class="social" title="Send us an email" target="_blank" href="mailto:@gmail.com"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
       	<a class="social" title="Connect with us on facebook" target="_blank" href="https://www.facebook.com"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
         <a class="social" title="Connect with us on twitter" target="_blank" href="https://www.twitter.com"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
       </ul>
