--- a/WebContent/HTML/brooklyn.html
+++ b/WebContent/HTML/brooklyn.html
@@ -8,9 +8,6 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
-  <!-- <link type="text/css"  rel="stylesheet" href="../css/brooklyn.css">
-  <base href="/"> -->
   <style>
   	body{
   	color:#1d2130;
@@ -31,6 +28,8 @@
 	.navbar-nav>li>a {
     line-height: 39px;
     font-size:large;
+    padding-top:10px;
+    padding-bottom:1px;
 	}
 	.navbar-brand>img {
     margin-top: -15px;
@@ -253,11 +252,11 @@
 	}
 	.social{
 	color:white;
-	margin-top:0.5em;
+	/* margin-top:0.5em; */
 	text-decoration:none;
 	}
 	.social:hover{
-	color:#292c3b;
+	color:#f4bb27;
 	text-decoration:none;
 	}
 	
@@ -307,6 +306,10 @@
 	.social{
 	font-size:1em;
 	font-weight:300;
+	}
+	.social:hover{
+	color:#292c3b;
+	text-decoration:none;
 	}
 	.carousel-caption{
  	padding-bottom:35px;
@@ -359,10 +362,15 @@
 	font-size:1.2em;
 	font-weight:300;
 	}
+	.social:hover{
+	color:#292c3b;
+	text-decoration:none;
+	}
 	.carousel-caption{
  	padding-bottom:35px;
  	font-size:1.2em;
  	}
+ 	
 	}
   </style>
 </head>
@@ -742,8 +750,8 @@
       	</div>	
    	</div>
    	<div class="row">
- 		<div class="col-sm-offset-4 col-sm-4 col-xs-offset-4 col-xs-4">
- 			<ul class="nav navbar-nav visible-xs visible-sm">
+ 		<div class="col-sm-offset-4 col-sm-6 col-xs-offset-4 col-xs-6 ">
+ 			<ul class="nav navbar-nav visible-xs visible-sm list-inline">
  				<li><a class="social" title="Send us an email" href="@mailto:gmail.com"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i>
       			</a></li>
       			<li><a class="social" title="Connect with us on facebook" target="_blank" href="https://www.facebook.com"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a></li>
