--- a/WebContent/HTML/brooklyn.html
+++ b/WebContent/HTML/brooklyn.html
@@ -28,8 +28,8 @@
 	.navbar-nav>li>a {
     line-height: 39px;
     font-size:large;
-    padding-top:10px;
-    padding-bottom:1px;
+    padding-top:10px !important;
+    padding-bottom:1px !important;
 	}
 	.navbar-brand>img {
     margin-top: -15px;
