styled mission class

--- a/WebContent/HTML/brooklyn.html
+++ b/WebContent/HTML/brooklyn.html
@@ -616,11 +616,11 @@
   	<br>
   	<span><b>Our Mission</b></span>
   	<br>
-  	<ul class="mission small">
-  		<li class="mission">To provide a public forum in Brooklyn in order to advance public interest in films and the independent production of films.</li> 
-  		<li class="mission">To draw worldwide attention to Brooklyn as a center for cinema.</li>
-  		<li class="mission">To encourage the rights of all Brooklyn residents to access and experience the power of independent filmmaking.</li>
-  		<li class="mission">To promote artistic excellence and the creative freedom of artists without censure.</li> 
+  	<ul class="mission fa-ul">
+  		<li class="mission"><i class="fas fa-check-square"></i>To provide a public forum in Brooklyn in order to advance public interest in films and the independent production of films.</li> 
+  		<li class="mission"><i class="fas fa-check-square"></i>To draw worldwide attention to Brooklyn as a center for cinema.</li>
+  		<li class="mission"><i class="fas fa-check-square"></i>To encourage the rights of all Brooklyn residents to access and experience the power of independent filmmaking.</li>
+  		<li class="mission"><i class="fas fa-check-square"></i>To promote artistic excellence and the creative freedom of artists without censure.</li> 
   	</ul>
   	<br>
   </div>	
